Alhamdullah ---its final

--- a/notes-old/fbise9mathold_theorem11_1_4.html
+++ b/notes-old/fbise9mathold_theorem11_1_4.html
@@ -1,7 +1,7 @@
 
 <h1>Theorem 11.1.4 – Medians of a Triangle Are Concurrent</h1>
 
-<img src="/images/theorems9old_11.1.4.svg" alt="Triangle with all three medians meeting at G" style="max-width:50%;">
+<img src="/media/images/theorems9old_11.1.4.svg" alt="Triangle with all three medians meeting at G" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>The medians of a triangle are concurrent and their point of concurrency is the point of trisection of each median.</p>
@@ -33,7 +33,7 @@
   </tbody>
 </table>
 
-<img src="/images/theorems9old_11.1.4_01.svg" alt="Parallelogram HBCG emphasized to show Step 1 visually" style="max-width:50%;">
+<img src="/media/images/theorems9old_11.1.4_01.svg" alt="Parallelogram HBCG emphasized to show Step 1 visually" style="max-width:50%;">
 
 <h2>Detailed Proof</h2>
 
