--- a/uploads/notes/fbise9mathold_theorem11_1_5.html
+++ b/uploads/notes/fbise9mathold_theorem11_1_5.html
@@ -2,7 +2,7 @@
   <h1>Theorem 11.1.5 – Parallel-Line Intercept Theorem</h1>
 
   <img
-    src="/images/theorems9old_11.1.5.svg"
+    src="/media/images/theorems9old_11.1.5.svg"
     alt="Parallel lines cutting equal segments on two transversals"
     style="max-width:50%;"
   />
@@ -64,7 +64,7 @@
 
 
   <img
-    src="/images/theorems9old_11.1.5.svg"
+    src="/media/images/theorems9old_11.1.5.svg"
     alt="Parallel lines cutting equal segments on two transversals"
     style="max-width:50%;"
   />
