--- a/uploads/notes/fbise9mathold_theorem12_1_1.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_1.html
@@ -14,7 +14,7 @@
   <!-- ───── Title & First Image ───── -->
   <h1>Theorem 12.1.1 – Any Point on the Perpendicular Bisector of a Line Segment Is Equidistant from Its End Points</h1>
 
-  <img src="/images/theorems9old_12.1.1.svg"
+  <img src="/media/images/theorems9old_12.1.1.svg"
        alt="Line LM is the perpendicular bisector of AB; point P lies on LM"
        style="max-width:50%;">
 
@@ -55,7 +55,7 @@
   </table>
 
   <!-- ───── Second Image ───── -->
-  <img src="/images/theorems9old_12.1.1.svg"
+  <img src="/media/images/theorems9old_12.1.1.svg"
        alt="Diagram repeated before detailed proof"
        style="max-width:50%; margin-top:1rem;">
 
