--- a/uploads/notes/fbise9mathold_theorem12_1_2.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_2.html
@@ -14,7 +14,7 @@
   <!-- ───── Title & First Image ───── -->
   <h1>Theorem 12.1.2 – A Point Equidistant from the End Points of a Line Segment Lies on Its Perpendicular Bisector</h1>
 
-  <img src="/images/theorems9old_12.1.2.svg"
+  <img src="/media/images/theorems9old_12.1.2.svg"
        alt="Point P with PA = PB on the perpendicular bisector of AB"
        style="max-width:50%;">
 
@@ -57,7 +57,7 @@
   </table>
 
   <!-- ───── Second Image ───── -->
-  <img src="/images/theorems9old_12.1.2.svg"
+  <img src="/media/images/theorems9old_12.1.2.svg"
        alt="Diagram repeated before proof"
        style="max-width:50%; margin-top:1rem;">
 
