--- a/uploads/notes/fbise9mathold_theorem12_1_4.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_4.html
@@ -14,7 +14,7 @@
 
   <h1>Theorem 12.1.4 – Any Point on the Bisector of an Angle Is Equidistant from Its Arms</h1>
 
-  <img src="/images/theorems9old_12.1.4.svg"
+  <img src="/media/images/theorems9old_12.1.4.svg"
        alt="Ray OP bisects angle ∠QOR; perpendiculars PQ and PR drawn"
        style="max-width:50%;">
 
@@ -48,7 +48,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_12.1.4.svg"
+  <img src="/media/images/theorems9old_12.1.4.svg"
        alt="Same diagram before proof"
        style="max-width:50%; margin-top:1rem;">
 
