--- a/uploads/notes/fbise9mathold_theorem12_1_5.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_5.html
@@ -13,7 +13,7 @@
 
   <h1>Theorem 12.1.5 – A Point Inside an Angle, Equidistant from Its Arms, Lies on the Angle Bisector</h1>
 
-  <img src="/images/theorems9old_12.1.5.svg"
+  <img src="/media/images/theorems9old_12.1.5.svg"
        alt="PQ = PR and point P lies on the angle bisector of ∠QOR"
        style="max-width:50%;">
 
@@ -47,7 +47,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_12.1.5.svg"
+  <img src="/media/images/theorems9old_12.1.5.svg"
        alt="Repeat diagram before proof"
        style="max-width:50%; margin-top:1rem;">
 
