--- a/uploads/notes/fbise9mathold_theorem13_1_1.html
+++ b/uploads/notes/fbise9mathold_theorem13_1_1.html
@@ -12,7 +12,7 @@
   <!-- ───── Title & First Image ───── -->
   <h1>Theorem&nbsp;13.1.1 – In a Triangle, the Longer Side Has the Greater Opposite Angle</h1>
 
-  <img src="/images/theorems9old_13.1.1.svg"
+  <img src="/media/images/theorems9old_13.1.1.svg"
        alt="Triangle ABC with AC &gt; AB; point D on AC so that AD = AB; BD drawn"
        style="max-width:50%;">
 
@@ -48,7 +48,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_13.1.1.svg"
+  <img src="/media/images/theorems9old_13.1.1.svg"
        alt="Diagram repeated before conclusion"
        style="max-width:50%; margin-top:1rem;">
 
