--- a/uploads/notes/fbise9mathold_theorem13_1_2.html
+++ b/uploads/notes/fbise9mathold_theorem13_1_2.html
@@ -14,7 +14,7 @@
   <!-- ───── Title & First Image ───── -->
   <h1>Theorem&nbsp;13.1.2 – In a Triangle, the Side Opposite the Greater Angle Is the Longer Side</h1>
 
-  <img src="/images/theorems9old_13.1.2.svg"
+  <img src="/media/images/theorems9old_13.1.2.svg"
        alt="Triangle ABC with ∠ABC &gt; ∠ACB; a point D on AC where AD = AB; BD drawn"
        style="max-width:50%;">
 
@@ -54,7 +54,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_13.1.2.svg"
+  <img src="/media/images/theorems9old_13.1.2.svg"
        alt="Diagram repeated before conclusion"
        style="max-width:50%; margin-top:1rem;">
 
