--- a/uploads/notes/fbise9mathold_theorem13_1_4.html
+++ b/uploads/notes/fbise9mathold_theorem13_1_4.html
@@ -12,7 +12,7 @@
 
   <h1>Theorem 13.1.4 – From a Point Outside a Line, the Perpendicular Is the Shortest Segment to the Line</h1>
 
-  <img src="/images/theorems9old_13.1.4.svg"
+  <img src="/media/images/theorems9old_13.1.4.svg"
        alt="Point P outside line l; perpendicular PM; oblique segments PA, PB"
        style="max-width:50%;">
 
@@ -43,7 +43,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_13.1.4.svg"
+  <img src="/media/images/theorems9old_13.1.4.svg"
        alt="Diagram repeated before conclusion"
        style="max-width:50%; margin-top:1rem;">
 
