--- a/uploads/notes/fbise9mathold_theorem14_1_1.html
+++ b/uploads/notes/fbise9mathold_theorem14_1_1.html
@@ -11,7 +11,7 @@
 <main class="notes">
   <h1>Theorem 14.1 – Basic Proportionality Theorem</h1>
 
-  <img src="/images/theorems9old_14.1.1.svg"
+  <img src="/media/images/theorems9old_14.1.1.svg"
        alt="Triangle with a line parallel to base intersecting other two sides"
        style="max-width:50%;" />
 
@@ -50,7 +50,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_14.1.1.svg"
+  <img src="/media/images/theorems9old_14.1.1.svg"
        alt="Same diagram re-shown before detailed proof"
        style="max-width:50%;" />
 
