--- a/uploads/notes/fbise9mathold_theorem14_1_2.html
+++ b/uploads/notes/fbise9mathold_theorem14_1_2.html
@@ -11,7 +11,7 @@
 <main class="notes">
   <h1>Theorem 14.2 – Converse of Basic Proportionality</h1>
 
-  <img src="/images/theorems9old_14.1.2.svg"
+  <img src="/media/images/theorems9old_14.1.2.svg"
        alt="Triangle with a segment dividing two sides proportionally"
        style="max-width:50%;" />
 
@@ -45,7 +45,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_14.1.2.svg"
+  <img src="/media/images/theorems9old_14.1.2.svg"
        alt="Re-inserted diagram"
        style="max-width:50%;" />
 
