--- a/uploads/notes/fbise9mathold_theorem14_1_3.html
+++ b/uploads/notes/fbise9mathold_theorem14_1_3.html
@@ -12,7 +12,7 @@
 <main class="notes">
   <h1>Theorem 14.3 – Internal Angle-Bisector Theorem</h1>
 
-  <img src="/images/theorems9old_14.1.3.svg"
+  <img src="/media/images/theorems9old_14.1.3.svg"
        alt="Triangle with angle bisector hitting opposite side"
        style="max-width:50%;" />
 
@@ -51,7 +51,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_14.1.3.svg"
+  <img src="/media/images/theorems9old_14.1.3.svg"
        alt="Diagram repeated before detailed proof"
        style="max-width:50%;" />
 
