--- a/uploads/notes/fbise9mathold_theorem15_1_1.html
+++ b/uploads/notes/fbise9mathold_theorem15_1_1.html
@@ -1,6 +1,6 @@
 <h1>Theorem 15.1.1 – Pythagoras Theorem</h1>
 
-<img src="/images/theorems9old_15.1.1.svg" alt="Right-angled triangle with squares on its sides" style="max-width:50%;">
+<img src="/media/images/theorems9old_15.1.1.svg" alt="Right-angled triangle with squares on its sides" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>In a right-angled triangle, the square on the hypotenuse is equal to the sum of the squares on the other two sides.</p>
