--- a/uploads/notes/fbise9mathold_theorem15_1_2.html
+++ b/uploads/notes/fbise9mathold_theorem15_1_2.html
@@ -1,6 +1,6 @@
 <h1>Theorem 15.1.2 – Converse of Pythagoras Theorem</h1>
 
-<img src="/images/theorems9old_15.1.2.svg" alt="Triangle with the longest side opposite the right angle" style="max-width:50%;">
+<img src="/media/images/theorems9old_15.1.2.svg" alt="Triangle with the longest side opposite the right angle" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>If, in a triangle, the square on one side equals the sum of the squares on the other two sides, then the angle opposite the first side is a right angle.</p>
