--- a/uploads/notes/fbise9mathold_theorem16_1_1.html
+++ b/uploads/notes/fbise9mathold_theorem16_1_1.html
@@ -1,6 +1,6 @@
 <h1>Theorem 16.1.1 – Triangles on the Same Base and Between the Same Parallels Have Equal Areas</h1>
 
-<img src="/images/theorems9old_16.1.1.svg" alt="Two triangles sharing a base and lying between the same parallels" style="max-width:50%;">
+<img src="/media/images/theorems9old_16.1.1.svg" alt="Two triangles sharing a base and lying between the same parallels" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>Triangles on the same base and between the same parallels are equal in area.</p>
