--- a/uploads/notes/fbise9mathold_theorem16_1_2.html
+++ b/uploads/notes/fbise9mathold_theorem16_1_2.html
@@ -1,7 +1,7 @@
 
 <h1>Theorem 16.1.2 – Parallelograms on the Same Base and Between the Same Parallels Have Equal Areas</h1>
 
-<img src="/images/theorems9old_16.1.2.svg" alt="Two parallelograms sharing a base between the same pair of parallels" style="max-width:50%;">
+<img src="/media/images/theorems9old_16.1.2.svg" alt="Two parallelograms sharing a base between the same pair of parallels" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>Parallelograms on the same base and between the same parallels are equal in area.</p>
