--- a/uploads/notes/fbise9mathold_theorem16_1_4.html
+++ b/uploads/notes/fbise9mathold_theorem16_1_4.html
@@ -1,7 +1,7 @@
 
 <h1>Theorem 16.1.4 – Triangles with Equal Altitudes Have Areas Proportional to Their Bases</h1>
 
-<img src="/images/theorems9old_16.1.4.svg" alt="Two triangles sharing equal heights but different bases" style="max-width:50%;">
+<img src="/media/images/theorems9old_16.1.4.svg" alt="Two triangles sharing equal heights but different bases" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>Triangles with equal altitudes have areas proportional to their corresponding bases.</p>
