--- a/uploads/notes/fbise9mathold_theorem12_1_3.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_3.html
@@ -15,7 +15,7 @@
   <!-- ───── Title & First Image ───── -->
   <h1>Theorem 12.1.3 – The Perpendicular Bisectors of the Sides of a Triangle Are Concurrent</h1>
 
-  <img src="/images/theorems9old_12.1.3.svg"
+  <img src="/media/images/theorems9old_12.1.3.svg"
        alt="Triangle ABC with perpendicular bisectors intersecting at O"
        style="max-width:50%;">
 
@@ -57,7 +57,7 @@
   </table>
 
   <!-- ───── Second Image ───── -->
-  <img src="/images/theorems9old_12.1.3.svg"
+  <img src="/media/images/theorems9old_12.1.3.svg"
        alt="Same diagram repeated before proof"
        style="max-width:50%; margin-top:1rem;">
 
