--- a/uploads/notes/fbise9mathold_theorem12_1_6.html
+++ b/uploads/notes/fbise9mathold_theorem12_1_6.html
@@ -13,7 +13,7 @@
   </h1>
 
   <img
-    src="/images/theorems9old_12.1.6.svg"
+    src="/media/images/theorems9old_12.1.6.svg"
     alt="Angle bisectors of triangle ABC meet at point I"
     style="max-width:50%;"
   />
@@ -84,7 +84,7 @@
   </table>
 
   <img
-    src="/images/theorems9old_12.1.6.svg"
+    src="/media/images/theorems9old_12.1.6.svg"
     alt="Reinforcement: all three bisectors meet at point I"
     style="max-width:50%; margin-top:1rem;"
   />
