--- a/uploads/notes/fbise9mathold_theorem13_1_3.html
+++ b/uploads/notes/fbise9mathold_theorem13_1_3.html
@@ -12,7 +12,7 @@
 
   <h1>Theorem 13.1.3 – In Any Triangle, the Sum of the Lengths of Any Two Sides Exceeds the Length of the Third Side</h1>
 
-  <img src="/images/theorems9old_13.1.3.svg"
+  <img src="/media/images/theorems9old_13.1.3.svg"
        alt="Triangle ABC; extension on AC to D so AD = AB"
        style="max-width:50%;">
 
@@ -44,7 +44,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_13.1.3.svg"
+  <img src="/media/images/theorems9old_13.1.3.svg"
        alt="Diagram repeated before conclusion"
        style="max-width:50%; margin-top:1rem;">
 
