--- a/uploads/notes/fbise9mathold_theorem14_1_4.html
+++ b/uploads/notes/fbise9mathold_theorem14_1_4.html
@@ -11,7 +11,7 @@
 <main class="notes">
   <h1>Theorem 14.4 – Similar Triangles ⇒ Proportional Corresponding Sides</h1>
 
-  <img src="/images/theorems9old_14.1.4.svg"
+  <img src="/media/images/theorems9old_14.1.4.svg"
        alt="Two similar triangles showing matching angles"
        style="max-width:50%;" />
 
@@ -47,7 +47,7 @@
     </tbody>
   </table>
 
-  <img src="/images/theorems9old_14.1.4.svg"
+  <img src="/media/images/theorems9old_14.1.4.svg"
        alt="Diagram repeated before proof"
        style="max-width:50%;" />
 
