--- a/uploads/notes/fbise9mathold_theorem16_1_3.html
+++ b/uploads/notes/fbise9mathold_theorem16_1_3.html
@@ -1,7 +1,7 @@
 
 <h1>Theorem 16.1.3 – A Triangle Has Half the Area of a Parallelogram on the Same Base and Between the Same Parallels</h1>
 
-<img src="/images/theorems9old_16.1.3.svg" alt="Triangle and an associated parallelogram sharing the same base and parallels" style="max-width:50%;">
+<img src="/media/images/theorems9old_16.1.3.svg" alt="Triangle and an associated parallelogram sharing the same base and parallels" style="max-width:50%;">
 
 <h2>Book Statement</h2>
 <p>A triangle and a parallelogram on the same base and between the same parallels have areas in the ratio 1&nbsp;:&nbsp;2; that is, the area of the triangle is half the area of the parallelogram.</p>
